# Mini-system-bankowy

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/controller/: ConsoleController.cpp  ConsoleController.h
src/model/: Account.cpp  Account.h
src/repository/: AccountRepository.h  InMemoryAccountRepository.cpp  InMemoryAccountRepository.h
src/service/: BankService.cpp  BankService.h  IBankService.h
src/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui
